--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nrwl/next": "15.9.2",
     "axios": "^1.0.0",
     "jsdom": "^21.1.1",
+    "minimist": "^1.2.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
     "@nrwl/workspace": "15.9.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/minimist": "^1.2.2",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
