refactor: move logger to lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@funding-database/daad-scraper": ["libs/daad-scraper/src/index.ts"]
+      "@funding-database/daad-scraper": ["libs/daad-scraper/src/index.ts"],
+      "@funding-database/logger": ["libs/logger/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
