--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsdom": "^21.1.1",
     "minimist": "^1.2.8",
     "next": "13.1.1",
+    "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0",
@@ -25,6 +26,7 @@
     "@nrwl/linter": "15.9.2",
     "@nrwl/node": "^15.9.2",
     "@nrwl/react": "15.9.2",
+    "@nrwl/vite": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
@@ -34,6 +36,8 @@
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^12.2.0",
@@ -56,6 +60,10 @@
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "vite": "^4.0.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
