feat: add prisma

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,16 @@ services:
       - "8001:8001"
     environment:
       - REDISINSIGHT_HOSTS=redis
+
+  postgres:
+    image: postgres
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=funding
+    volumes:
+      - pgdata:/var/lib/postgresql/data  
+volumes:
+  pgdata:
