--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.1.5",
     "tslib": "^2.3.0",
     "winston": "^3.8.2"
   },
