--- a/package.json
+++ b/package.json
@@ -5,70 +5,72 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@nrwl/next": "15.9.2",
+    "@nrwl/next": "16.1.0",
     "@prisma/client": "^4.13.0",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
-    "jsdom": "^21.1.1",
+    "jsdom": "^22.0.0",
     "minimist": "^1.2.8",
-    "next": "13.1.1",
+    "next": "13.4.0",
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^4.4.0",
+    "recharts": "^2.5.0",
     "swr": "^2.1.5",
-    "tslib": "^2.3.0",
+    "tslib": "^2.5.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/esbuild": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/node": "^15.9.2",
-    "@nrwl/react": "15.9.2",
-    "@nrwl/vite": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@babel/preset-react": "^7.18.6",
+    "@nrwl/cypress": "16.1.0",
+    "@nrwl/esbuild": "16.1.0",
+    "@nrwl/eslint-plugin-nx": "16.1.0",
+    "@nrwl/jest": "16.1.0",
+    "@nrwl/js": "16.1.0",
+    "@nrwl/linter": "16.1.0",
+    "@nrwl/node": "^16.1.0",
+    "@nrwl/react": "16.1.0",
+    "@nrwl/vite": "16.1.0",
+    "@nrwl/workspace": "16.1.0",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.1",
     "@types/minimist": "^1.2.2",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "autoprefixer": "10.4.13",
-    "babel-jest": "^29.4.1",
-    "cypress": "^12.2.0",
-    "esbuild": "^0.17.5",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.1.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "@types/node": "20.0.0",
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-c8": "~0.31.0",
+    "@vitest/ui": "^0.31.0",
+    "autoprefixer": "10.4.14",
+    "babel-jest": "^29.5.0",
+    "cypress": "^12.11.0",
+    "esbuild": "^0.17.18",
+    "eslint": "~8.39.0",
+    "eslint-config-next": "13.4.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
-    "nx": "15.9.2",
-    "postcss": "8.4.21",
-    "prettier": "^2.6.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-environment-node": "^29.5.0",
+    "nx": "16.1.0",
+    "postcss": "8.4.23",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "3.2.7",
-    "ts-jest": "^29.0.5",
+    "tailwindcss": "3.3.2",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5",
-    "vite": "^4.0.1",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.25.8"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0"
   }
 }
