--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.0.17",
     "@nrwl/next": "16.1.0",
     "@prisma/client": "^4.13.0",
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "jsdom": "^22.0.0",
