--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -29,7 +29,8 @@
       "configurations": {
         "development": {
           "buildTarget": "web:build:development",
-          "dev": true
+          "dev": true,
+          "port": 4300
         },
         "production": {
           "buildTarget": "web:build:production",
