--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsdom": "^22.0.0",
     "minimist": "^1.2.8",
     "next": "13.4.0",
+    "nextjs-openai": "^6.9.0",
+    "openai-streams": "^5.1.1",
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
