--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@nrwl/next": "16.1.0",
@@ -66,6 +67,7 @@
     "nx": "16.1.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
