feat: add foerderdatenbank-scraper skeleton

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@funding-database/daad-scraper": ["libs/daad-scraper/src/index.ts"],
       "@funding-database/db": ["libs/db/src/index.ts"],
       "@funding-database/eu-scraper": ["libs/eu-scraper/src/index.ts"],
+      "@funding-database/foerderdatenbank-scraper": ["libs/foerderdatenbank-scraper/src/index.ts"],
       "@funding-database/logger": ["libs/logger/src/index.ts"]
     }
   },
