--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@nrwl/react": "16.1.0",
     "@nrwl/vite": "16.1.0",
     "@nrwl/workspace": "16.1.0",
+    "@nx/jest": "16.1.0",
+    "@nx/js": "16.1.0",
+    "@nx/node": "16.1.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.1",
     "@types/minimist": "^1.2.2",
