--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@nrwl/next": "16.1.0",
+    "@nx/next": "16.1.0",
     "@prisma/client": "^4.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
@@ -39,9 +40,11 @@
     "@nrwl/react": "16.1.0",
     "@nrwl/vite": "16.1.0",
     "@nrwl/workspace": "16.1.0",
+    "@nx/cypress": "16.1.0",
     "@nx/jest": "16.1.0",
     "@nx/js": "16.1.0",
     "@nx/node": "16.1.0",
+    "@nx/react": "16.1.0",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.1",
     "@types/minimist": "^1.2.2",
