feat: pdf + text parsing

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "next": "13.4.0",
     "nextjs-openai": "^6.9.0",
     "openai-streams": "^5.1.1",
-    "pdf-parse": "^1.1.1",
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^4.4.0",
+    "react-pdf": "^6.2.2",
     "recharts": "^2.5.0",
     "swr": "^2.1.5",
     "tslib": "^2.5.0",
@@ -50,8 +50,10 @@
     "@types/jest": "^29.5.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "20.0.0",
+    "@types/pdf-parse": "^1.1.1",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
+    "@types/react-pdf": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitest/coverage-c8": "~0.31.0",
