--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nextjs-openai": "^6.9.0",
     "openai-streams": "^5.1.1",
     "prisma": "^4.13.0",
+    "promise-throttle-all": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^4.4.0",
