--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "gpt-tokenizer": "^1.0.5",
     "jsdom": "^22.0.0",
     "minimist": "^1.2.8",
     "next": "13.4.0",
     "nextjs-openai": "^6.9.0",
+    "openai": "^3.2.1",
     "openai-streams": "^5.1.1",
+    "pgvector": "^0.1.4",
     "prisma": "^4.13.0",
     "promise-throttle-all": "^1.1.1",
     "react": "18.2.0",
