feat: add empty docs page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "minimist": "^1.2.8",
     "next": "13.4.0",
     "nextjs-openai": "^6.9.0",
+    "nextra": "2.7.1",
+    "nextra-theme-docs": "2.7.1",
     "openai": "^3.2.1",
     "openai-streams": "^5.1.1",
     "pgvector": "^0.1.4",
@@ -46,6 +48,7 @@
     "@nrwl/vite": "16.1.0",
     "@nrwl/workspace": "16.1.0",
     "@nx/cypress": "16.1.0",
+    "@nx/workspace": "16.3.2",
     "@nx/jest": "16.1.0",
     "@nx/js": "16.1.0",
     "@nx/node": "16.1.0",
