feat: add notifications library

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hotkeys-hook": "^4.4.0",
     "react-pdf": "^7.1.2",
     "recharts": "^2.6.2",
+    "resend": "^0.15.1",
     "swr": "^2.1.5",
     "tslib": "^2.5.3",
     "winston": "^3.9.0"
@@ -48,11 +49,11 @@
     "@nrwl/vite": "16.3.2",
     "@nrwl/workspace": "16.3.2",
     "@nx/cypress": "16.3.2",
-    "@nx/workspace": "16.3.2",
     "@nx/jest": "16.3.2",
     "@nx/js": "16.3.2",
     "@nx/node": "16.3.2",
     "@nx/react": "16.3.2",
+    "@nx/workspace": "16.3.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.2",
     "@types/minimist": "^1.2.2",
