--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,13 @@ services:
       - postgres
     env_file:
       - .env
-    
+  docs:
+    build:
+      context: .
+      dockerfile: apps/docs/Dockerfile
+    ports:
+      - 3000:3000
+
 volumes:
   pgdata:
 
