build: use prod server for docs

--- a/apps/docs/project.json
+++ b/apps/docs/project.json
@@ -16,6 +16,14 @@
       "options": {
         "command": "npx next dev",
         "cwd": "apps/docs"
+      },
+      "configurations": {
+        "production": {
+          "command": "npx next start"
+        },
+        "development": {
+          "command": "npx next dev"
+        }
       }
     },
     "export": {
